# markovlens

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  GETTING-STARTED.md  LICENSE  README.md  manual-book.md  pyproject.toml
.claude/commands/: create-plan.md  implement.md  prime.md
.claude/memory/: MEMORY.md  decision_duckdb.md  decision_streamlit.md  decision_uv.md  project_doc_discipline.md  project_gsd_primary.md  user_role.md  workflow_token_optimization.md  workflow_two_terminal.md
.claude/rules/: coding-style.md  context7.md  data-storage.md  markov-patterns.md  project-rules.md  python-conventions.md  streamlit-conventions.md  workflow.md
.claude/skills/dataset-prepper/: SKILL.md
.claude/skills/markov-validator/: SKILL.md
.claude/skills/monte-carlo-runner/: SKILL.md
.claude/skills/streamlit-page-scaffolder/: SKILL.md
.github/workflows/: ci.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-markov-engine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN-01-test-infrastructure.md  01-PLAN-03-simulation-engine.md  01-PLAN-04-data-layer.md  01-PLAN-05-seed-script.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-design-system-brand-share/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-churn-domain/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-UAT.md  03-UI-REVIEW.md  03-VALIDATION.md
.planning/phases/04-home-export-settings/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-CONTEXT.md  04-VERIFICATION.md
.planning/phases/05-quality-assurance-deployment/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-VERIFICATION.md
.planning/quick/260531-ikw-fix-4-visual-issues-from-phase-03-ui-rev/: 260531-ikw-PLAN.md  260531-ikw-SUMMARY.md
.planning/quick/260531-knp-stack-what-if-charts-vertically-and-fix-/: 260531-knp-PLAN.md  260531-knp-SUMMARY.md
.planning/quick/260531-p03-churn-polish-6-gaps/: SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
.streamlit/: config.toml
app/: Home.py  __init__.py  db.py
app/components/: __init__.py  empty_state.py  kpi_card.py  monte_carlo_fan.py  sankey_flow.py  section_header.py  transition_heatmap.py
app/pages/: 1_Brand_Share.py  2_Churn.py  4_Settings.py
app/styles/: __init__.py  plotly_theme.py  theme.css
core/: __init__.py  config.py  exceptions.py  metrics.py  models.py  simulation.py
core/db/: __init__.py  connection.py  init.py  queries.py  schema.sql  serialization.py
core/io/: __init__.py  loaders.py
data/: SOURCES.md
docs/: API-REFERENCE.md  DATABASE.md  DATASETS.md  DEPLOYMENT.md  MARKOV-MODELS.md  MONTE-CARLO.md
docs/assets/screenshots/: README.md
docs/design-reference/: README.md  markov.css
docs/design-reference/js/: app.jsx  charts.jsx  data.jsx  icons.jsx  pages1.jsx  pages2.jsx  pages3.jsx  shell.jsx  ui.jsx
docs/planning/: README.md  decisions.md  master-plan.md  task-progress.md
domains/: __init__.py
domains/brand_share/: __init__.py  service.py
domains/churn/: __init__.py  service.py
scripts/: seed_data.py
tests/: conftest.py
tests/integration/: test_brand_share_service.py  test_churn_service.py  test_queries.py
tests/unit/: test_churn_service.py  test_components.py  test_csv_export.py  test_db_init.py  test_home_queries.py  test_loaders.py  test_metrics.py  test_models.py  test_page_import.py  test_plotly_theme.py  test_serialization.py  test_simulation.py  test_stationary.py
