[project]
name = "markovlens"
version = "0.1.0"
description = "Multi-domain forecasting workbench using Markov chain models for brand share and customer churn forecasting"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "afrizzal", email = "it@miracle-clinic.com" }]
keywords = ["markov-chain", "forecasting", "monte-carlo", "streamlit", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Web app
    "streamlit>=1.40.0",
    "streamlit-shadcn-ui>=0.1.18",
    "streamlit-extras>=0.5.0",
    # Numerical
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    # Storage
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    # Visualization
    "plotly>=5.24.0",
    # Reporting
    "reportlab>=4.2.0",
    # Config
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "nbformat>=5.10.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "data", "reports"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "C4", "PT"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N806"]
# core/ and scripts use Chan 2015 mathematical variable names (P, Y_1, Q_t, G) — N803/N806 intentional
"core/models.py" = ["N803", "N806", "UP040"]
"core/simulation.py" = ["N803", "N806", "UP040"]
# service.py uses Chan 2015 math variable names (P, Y_1, Q_t, G) and a lambda extractor
"domains/brand_share/service.py" = ["N803", "N806", "E731"]
# churn service.py uses Chan 2015 math variable names (P, Q, Y_1) and a lambda extractor
"domains/churn/service.py" = ["N803", "N806", "E731"]
"scripts/seed_data.py" = ["N806"]
# sankey_flow.py ports JSX algorithm using W, H, PT, PB, sH, tH (visual layout vars) — intentional
"app/components/sankey_flow.py" = ["N803", "N806"]
"tests/unit/test_models.py" = ["N806"]
"tests/unit/test_simulation.py" = ["N806", "PT018"]
"tests/integration/test_queries.py" = ["RUF059"]
# Streamlit mandates PascalCase page filenames (Home.py, 1_Brand_Share.py) — N999 not applicable
"app/**/*.py" = ["N999"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# --basetemp uses project-local dir instead of system %TEMP% (Windows permission/AV interference resilient)
addopts = "-v --tb=short --strict-markers --basetemp=.pytest_tmp"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring DuckDB",
]
